fixed checkout page spacing

--- a/public/css/createBuyerOrder.css
+++ b/public/css/createBuyerOrder.css
@@ -42,6 +42,7 @@ body {
 
 /**** CONFIRM ORDER ****/
 
+
 /**** SHIPPING ADDRESS ****/
 
 .form-control:focus {
@@ -51,6 +52,12 @@ body {
 
 .form-group {
     margin-bottom: 25px;
+}
+
+@media (max-width: 768px) {
+    .form-group {
+        margin-bottom: 0;
+    }
 }
 
 .form-group label {
